# hexlet-flask-example

./: Makefile  example.py  pyproject.toml  requirements.txt  user_functions.py
templates/users/: edit.html  index.html  login.html  new.html  show.html
